advance/monorepo/devops/production/add-ingress-weave-gitops.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.hello.k8s
      http:
        paths:
          - backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
            path: /
            pathType: Prefix
